# Lamborghinidream

./: CMakeLists.txt  Cargo.toml  README.md
.cargo/: config
aktualizr/: APIintegrate.cc  CMakeLists.txt
src/: cross.rs
