[package]
name = "cross"
version = "0.1.0"
edition = "2021"
description ="minimal"
license = "Apache-2.0"
repository ="https://github.com/girishnarayan/Lamborghinidream.git"
homepage ="https://github.com/girishnarayan/Lamborghinidream.git"




[[bin]]
name = "cross"
path = "./src/cross.rs"

[dependencies]

rppal ="0.14.0"
anyhow = "1.0.75"

[profile.dev] #//profile used for cargo build//
panic ="abort"
[profile.release] #//profile used for cargo release//
panic ="abort"

[build-dependencies]

cc = "1.0" 
